; ModuleID = '/home/carl/AnghaBench/linux/tools/bpf/bpftool/extr_feature.c_print_kernel_option.c'
source_filename = "/home/carl/AnghaBench/linux/tools/bpf/bpftool/extr_feature.c_print_kernel_option.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@json_output = common dso_local global i64 0, align 8
@json_wtr = common dso_local global i32 0, align 4
@errno = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [17 x i8] c"%s is set to %s\0A\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"%s is not set\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*)* @print_kernel_option to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_kernel_option(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i64, i64* @json_output, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %37

9:                                                ; preds = %2
  %10 = load i8*, i8** %4, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %16, label %12

12:                                               ; preds = %9
  %13 = load i32, i32* @json_wtr, align 4
  %14 = load i8*, i8** %3, align 8
  %15 = call i32 @jsonw_null_field(i32 %13, i8* %14)
  br label %48

16:                                               ; preds = %9
  store i64 0, i64* @errno, align 8
  %17 = load i8*, i8** %4, align 8
  %18 = call i32 @strtol(i8* %17, i8** %5, i32 0)
  store i32 %18, i32* %6, align 4
  %19 = load i64, i64* @errno, align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %31, label %21

21:                                               ; preds = %16
  %22 = load i8*, i8** %5, align 8
  %23 = load i8, i8* %22, align 1
  %24 = sext i8 %23 to i32
  %25 = icmp eq i32 %24, 10
  br i1 %25, label %26, label %31

26:                                               ; preds = %21
  %27 = load i32, i32* @json_wtr, align 4
  %28 = load i8*, i8** %3, align 8
  %29 = load i32, i32* %6, align 4
  %30 = call i32 @jsonw_int_field(i32 %27, i8* %28, i32 %29)
  br label %36

31:                                               ; preds = %21, %16
  %32 = load i32, i32* @json_wtr, align 4
  %33 = load i8*, i8** %3, align 8
  %34 = load i8*, i8** %4, align 8
  %35 = call i32 @jsonw_string_field(i32 %32, i8* %33, i8* %34)
  br label %36

36:                                               ; preds = %31, %26
  br label %48

37:                                               ; preds = %2
  %38 = load i8*, i8** %4, align 8
  %39 = icmp ne i8* %38, null
  br i1 %39, label %40, label %44

40:                                               ; preds = %37
  %41 = load i8*, i8** %3, align 8
  %42 = load i8*, i8** %4, align 8
  %43 = call i32 (i8*, i8*, ...) @printf(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i8* %41, i8* %42)
  br label %47

44:                                               ; preds = %37
  %45 = load i8*, i8** %3, align 8
  %46 = call i32 (i8*, i8*, ...) @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8* %45)
  br label %47

47:                                               ; preds = %44, %40
  br label %48

48:                                               ; preds = %12, %47, %36
  ret void
}

declare dso_local i32 @jsonw_null_field(i32, i8*) #1

declare dso_local i32 @strtol(i8*, i8**, i32) #1

declare dso_local i32 @jsonw_int_field(i32, i8*, i32) #1

declare dso_local i32 @jsonw_string_field(i32, i8*, i8*) #1

declare dso_local i32 @printf(i8*, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
